v0.99.9-RC3:
*) Fix to io/io_tipsy.c to support non-XDR TIPSY files.  (Thanks to Robert Thompson for finding!).

v0.99.9-RC2 (9/27/13):
*) Major fix to shape calculations: previous versions had biased iterative calculations of the shape major axis.  (Thanks to Doug Hellinger for finding!).  Shape calculations are now weighted according to the Allgood et al. approach (1/r^2).
*) Shape calculations are done at two radii (Rvir and R500c by default).  This has resulted in some changes to the output column order.
*) Applied patch from Matt Turk to let YT calculate arbitrary halo properties.
*) Minor changes to ART/GADGET input routines to support loading particles from a pipe instead of a file.
*) Added a STRICT_SO_MASSES mode for calculating SO masses without gravitational unbinding or limits due to the use of FOF for initial group finding.
*) Fixed crashing issues in BGC2/STRICT_SO_MASSES code (thanks to Matt Becker for finding!).
*) Fixed a rare issue wherein BGC/SO masses would be set to the mass of a single particle.
*) Updates to ART code to support new Bolshoi-Planck format.
*) Speed improvements, especially for halos under 10,000 particles.
*) Dark energy equation of state now allowed to be changed (code and testing thanks to Matt Becker).  Change W0 and WA in the config file to use.
*) New script mkpipes.pl to help with making named pipes for use with alternative input formats.
*) README is now a proper manual generated with LaTeX.

v0.99.9 RC1 (3/13/2013):
*) Fixed Rs_Klypin to use bound mass instead of unbound mass for halos when BOUND_PROPS = 1.  (Thanks to Yao-Yuan Mao for finding!).
*) More efficient memory allocation in tree construction.
*) New config parameter (RUN_PARALLEL_ON_SUCCESS) which will launch a program from every analysis process after each snapshot is analyzed.  Rockstar will wait for successful completion before continuing.