@@ -1,5 +1,9 @@
 v0.99.9-RC3:
 *) Fix to io/io_tipsy.c to support non-XDR TIPSY files.  (Thanks to Robert Thompson for finding!).
+*) Major fix to shape calculations within R_500c: previous versions were effectively not iterating the shape calculation.
+*) Additional experimental pseudo-evolution mass calculations.
+*) Improved simulation data load distribution to reduce network transmissions.
+*) Added EXACT_LL_CALC option for more deterministic (but slower) halo property calculation.  Set to 1 to enable.
 
 v0.99.9-RC2 (9/27/13):
 *) Major fix to shape calculations: previous versions had biased iterative calculations of the shape major axis.  (Thanks to Doug Hellinger for finding!).  Shape calculations are now weighted according to the Allgood et al. approach (1/r^2).
@@ -26,7 +30,7 @@ v0.99.8: (Not publicly released)
 *) Added FORCE_RES_PHYS_MAX configuration parameter to set the maximum physical force resolution---mainly useful for analyzing simulations at a>>1.
 
 v0.99.7: (Not publicly released)
-*) Static code analysis now regular part of release cycle.  (Thanks to both Coverity and to the Clang project).  Two memory leaks (in the TIPSY and BGC2 IO) are now fixed. 
+*) Static code analysis now regular part of release cycle.  (Thanks to both Coverity and to the Clang project).  Two memory leaks (in the TIPSY and BGC2 IO) are now fixed.
 *) Fixed crash due to floating-point roundoff errors in building FOF groups across periodic boundaries.
 *) Added network profiling.  This will help improve processor utilization in future versions.
 
